<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/common_margin_53">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/h80"
        android:text="@string/get_score"
        android:textColor="@color/color_white"
        android:textSize="@dimen/font_28"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/h8"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/yellow_ffcb00"
        android:textSize="@dimen/font_40"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        tools:text="+125,000" />

    <TextView
        android:id="@+id/tv_score_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textColor="@color/color_white"
        android:textSize="@dimen/font_12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_score" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_score"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/h6"
        android:layout_marginBottom="@dimen/h32"
        android:background="@drawable/rect18_black21283f"
        android:paddingVertical="@dimen/h12"
        android:paddingStart="@dimen/w18"
        android:paddingEnd="@dimen/w13"
        app:layout_constraintBottom_toTopOf="@+id/tv_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_score_hint"
        tools:listitem="@layout/item_tnmt_result_score" />


    <TextView
        android:id="@+id/tv_back"
        android:layout_width="0dp"
        android:layout_height="@dimen/h42"
        android:layout_marginEnd="@dimen/w8"
        android:layout_marginBottom="@dimen/h32"
        android:background="@drawable/rect9_black21283f"
        android:gravity="center"
        android:text="@string/back"
        android:textColor="@color/color_white"
        android:textSize="@dimen/font_12"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tv_again" />


    <TextView
        android:id="@+id/tv_again"
        android:layout_width="0dp"
        android:layout_height="@dimen/h42"
        android:layout_marginStart="@dimen/w8"
        android:layout_marginBottom="@dimen/h32"
        android:background="@drawable/gradient_common_blue"
        android:gravity="center"
        android:text="@string/play_again"
        android:textColor="@color/color_white"
        android:textSize="@dimen/font_12"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tv_back"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>