<?xml version="1.0" encoding="utf-8"?>
<com.scwang.smart.refresh.layout.SmartRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.scwang.smart.refresh.header.MaterialHeader
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.core.widget.NestedScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/nsv_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/common_margin_53"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_header_margin">

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/h44"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_v_game_tab_logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.biiiiit.kokonats.ui.custome.EnergyShowView
                    android:id="@+id/energy_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/w6"
                    android:background="@drawable/rect9_black1affcb00"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintLeft_toRightOf="@+id/iv_logo"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_congratulations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/h14"
                android:background="@drawable/ic_v_tab_reward_marquee"
                android:ellipsize="marquee"
                android:focusableInTouchMode="true"
                android:fontFamily="sans-serif-medium"
                android:freezesText="true"
                android:gravity="center"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:paddingHorizontal="@dimen/w12"
                android:scrollHorizontally="true"
                android:textColor="@color/color_white"
                android:textSize="@dimen/font_11"
                tools:text="Congratulations!  just won 1, kokos! Ckokoskokoskokoskokoskokoskokosong.."
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_energy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/energy"
                android:textColor="@color/color_white"
                android:textSize="@dimen/font_24"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_marginTop="@dimen/h28"
                android:layout_marginBottom="@dimen/h10"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_buy_energy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@drawable/rect9_black21283f_ripple"
                android:focusable="true"
                android:clickable="true"
                android:layout_marginBottom="@dimen/h8"
                tools:viewBindingIgnore="true">
                <ImageView
                    android:id="@+id/iv_energy"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/oval_black19ffcb00"
                    android:paddingVertical="@dimen/h9"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_v_energy16"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/yellow_fabe2c"
                    android:textSize="@dimen/font_18"
                    android:textStyle="bold"
                    android:text="@string/buy_energy"
                    android:layout_marginLeft="@dimen/w20"
                    app:layout_constraintLeft_toRightOf="@+id/iv_energy"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/iv_arrow"
                    app:layout_constraintHorizontal_bias="0" />

                <ImageView
                    android:id="@+id/iv_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_right_24"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/items"
                android:textColor="@color/color_white"
                android:textSize="@dimen/font_24"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_marginTop="@dimen/h20"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:paddingVertical="@dimen/h11"
                tools:itemCount="3"
                tools:listitem="@layout/item_home_store_item"
                />
        </LinearLayout>



    </androidx.core.widget.NestedScrollView>
</com.scwang.smart.refresh.layout.SmartRefreshLayout>