<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.scwang.smart.refresh.layout.SmartRefreshLayout
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.scwang.smart.refresh.header.MaterialHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/common_margin_53">


            <LinearLayout
                android:id="@+id/ll_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/h32">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:id="@+id/tv_logout"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/common_btn_height"
                        android:layout_gravity="end"
                        android:layout_marginTop="@dimen/h32"
                        android:background="@drawable/rect10_trans_gray323755"
                        android:gravity="center"
                        android:paddingHorizontal="@dimen/w10"
                        android:text="@string/logout"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/font_13"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <ImageView
                        android:id="@+id/iv_avatar"
                        android:layout_width="67dp"
                        android:layout_height="67dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/h15"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_logout"
                        tools:src="@mipmap/ic_launcher_round" />

                    <ImageView
                        android:id="@+id/iv_setting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rect10_trans_gray323755"
                        android:padding="@dimen/h12"
                        android:src="@drawable/ic_v_setting"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
                        app:layout_constraintStart_toStartOf="@+id/tv_logout"
                        app:layout_constraintTop_toTopOf="@+id/iv_avatar" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <TextView
                    android:id="@+id/tv_uid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/h18"
                    android:paddingStart="@dimen/h26"
                    android:paddingEnd="@dimen/h26"
                    android:singleLine="true"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/font_12"
                    tools:text="UID:19836271298" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/h6"
                    android:gravity="center"
                    android:maxLines="2"
                    android:paddingStart="@dimen/h26"
                    android:paddingEnd="@dimen/h26"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/font_18"
                    tools:text="ユーザー名" />

                <LinearLayout
                    android:id="@+id/ll_reward"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/h15"
                    android:background="@drawable/rect16_yellowfabe2c"
                    android:gravity="center"
                    android:minHeight="@dimen/h52"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/w30"
                    android:paddingVertical="@dimen/h6">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/h40"
                        android:src="@drawable/ic_koko" />


                    <TextView
                        android:id="@+id/tv_reward"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/w6"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/font_26"
                        android:textStyle="bold"
                        app:autoSizeMaxTextSize="@dimen/font_26"
                        app:autoSizeMinTextSize="@dimen/font_20"
                        tools:text="123,456,789" />

                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_energy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/h22"
                    android:background="@drawable/rect16_black"
                    android:minHeight="@dimen/h52"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/w10"
                    android:paddingVertical="@dimen/h6">


                    <ImageView
                        android:id="@+id/iv_energy_0"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/h26"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_v_energy16"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/iv_energy_add"
                        android:layout_width="@dimen/w34"
                        android:layout_height="0dp"
                        android:padding="@dimen/h6"
                        android:src="@drawable/ic_v_energy_add_blue20"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_energy"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/w6"
                        android:ellipsize="end"
                        android:letterSpacing="0.06"
                        android:maxLines="2"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/font_18"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toRightOf="@+id/iv_energy_0"
                        app:layout_constraintRight_toLeftOf="@+id/iv_energy_add"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="2000000" />


                </androidx.constraintlayout.widget.ConstraintLayout>


                <TextView
                    android:id="@+id/tv_tnmt_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/h36"
                    android:singleLine="true"
                    android:text="@string/tnmt_history"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/font_13"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcv_plays"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:paddingVertical="@dimen/h11"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_tnmt_play_history" />

                <TextView
                    android:id="@+id/tv_more"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/common_btn_height"
                    android:background="@drawable/rect10_trans_gray323755"
                    android:gravity="center"
                    android:text="@string/view_more"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/font_13" />


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


    </com.scwang.smart.refresh.layout.SmartRefreshLayout>


</FrameLayout>